# scikit-video

./: .gitignore  .travis.yml  CHANGELOG.rst  CHANGELOG.txt  CONTRIBUTING.rst  COPYING  LICENSE.txt  MANIFEST.in  README.md  README.rst  circle.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  tests.yml
benchmarks/: bench_motion.py  bench_vread.py
continuous_integration/: ffmpeg_fix.sh  test_script.sh
doc/: Makefile  benchmarks.rst  classes.rst  conf.py  datasets.rst  examples.rst  faq.rst  index.rst  io.rst  measure.rst  motion.rst  utilities.rst
doc/examples/: IOcorrupt.py  anomaly.rst  anomaly_detect.py  compare.py  didactic.rst  imagedata.py  imagedata2.py  imagedata3.py  io.rst  io2.rst  lumasnippet.py  lumasnippet_trunc.py  motion.rst  motion_charts.py  outputdictexample.py  rawsnippet.py  scene.rst  scene_parse.py  sparsevid.py
doc/images/: anomaly_detection.mpg
doc/modules/: classes.rst  core.rst  datasets.rst  io.rst  measure.rst  motion.rst  utils.rst
doc/sphinxext/: gen_rst.py
doc/sphinxext/youtube/: README.rst  setup.py  tox.ini
doc/templates/: class.rst  class_with_call.rst  class_without_init.rst  function.rst
doc/themes/sphinx_bootstrap_theme/: globaltoc.html  home.html  layout.html  mycustomsidebar.html  navbar.html  relations.html  theme.conf
doc/themes/sphinx_bootstrap_theme/static/: bootstrap-sphinx.css_t
docs/: conf.py  index.rst  stuff.rst
scripts/: before_install.sh  build_doc.sh  ffmpeg_fix.sh  install.sh  install_backend.sh  push_doc.sh  script.sh  smoke_clean_install.sh  test_script.sh
skvideo/: __init__.py  setup.py
skvideo/_utils/: __init__.py
skvideo/datasets/: __init__.py  setup.py
skvideo/io/: __init__.py  _io.py  abstract.py  avconv.py  avprobe.py  ffmpeg.py  ffprobe.py  io.py  mprobe.py  s3ffmpeg.py  s3ffprobe.py
skvideo/measure/: Li3DDCT.py  __init__.py  brisque.py  mad.py  mae.py  mse.py  msssim.py  niqe.py  psnr.py  scene.py  setup.py  ssim.py  strred.py  videobliinds.py  view_diff.py  viideo.py
skvideo/measure/dat/: frames_modelparameters.mat
skvideo/measure/data/: niqe_image_params.mat  niqe_model_NOTICE.txt
skvideo/motion/: __init__.py  block.py  gme.py
skvideo/tests/: test_IOfail.py  test_compare.py  test_deprecations.py  test_error_handling.py  test_ffmpeg.py  test_frame_range.py  test_import_star.py  test_libav.py  test_measure.py  test_memory_input.py  test_memory_output.py  test_motion.py  test_path.py  test_path_warning.py  test_pathlib.py  test_pattern.py  test_protocol_detection.py  test_reader_integrity.py  test_release_spec.py  test_scenedet.py  test_source_classification.py  test_url_input.py  test_url_output.py  test_verbosity.py  test_videobliinds_bounds.py  test_vopen.py  test_vread.py  test_vreader.py  test_vsave.py  test_vwrite.py  test_writer_errors.py  test_writer_lifecycle.py  test_xml_parsing.py
skvideo/utils/: __init__.py  edge.py  image.py  mscn.py  stats.py  stpyr.py
validation/: test_model_integrity.py  test_pointwise_closedform.py  test_ssim.py
